preview.2010-May-19 (aka Leiden Release)
-----------------------------------------
 - remove mindens maxdens from command line parameters
 - add minphys and maxphys to set minimum and maximum physical value
 - add selphys to select the physical quantity to display
 - auto_render command line parameter added
   if true, guess the best rendering mode, otherwise use accumulation buffer
 - glnemo2 no more crash when it displays a number of orbits
   lesser than 20
 - fix a bug about the rendering mode changing from time to time
 - set correctly min/man physical quantity with respecting slide
 - draw correctly histo view
	
	
preview.2010-April-24 
---------------------
  can select times with list of snapshots
  add experimental Ramses reader (gas,halo,stars)
  add gyrfalcON's runtime manipulator (see $NEMO/usr/jcl/glnemo2/gyrfalcon/README)
  add clean installer (make install => glnemo2 install in $NEMOBIN)
  add glnemo2 manual (man glnemo2)
  many bugs fixed
	
preview.2010-Feb-15
-------------------
  fix a bug on gadget2 file with BNDRY data
  
preview.2010-Feb-03
-------------------
  glnemo2 can render automatically all the time steps of a snapshot, if 
  from the command line, input parameters screenshot has a value  and play=t.  

  Support added for Gadget2 file in multiple data file. 

preview.2009-Oct-23
-------------------
- new input parameters enhance screenshot from the command line:
   - mindens   : set minimum density threshold
   - maxdens   : set maximum density threshold
   - com       : boolean to center according to the center of mass 
   - cmapindex : give the colormap index
- colormap can be selected directly from the user interface

- experimental temperature display

1.preview.2009-Jul-16
----------------------
- huge speed up on the rendering engine (up to 1000% !), thanks to :
   - vertex buffer object
   - vertex and pixel shader (via glsl)
   - GL_POINT_SPRITE_ARB and GL_VERTEX_PROGRAM_POINT_SIZE_NV
